Remove the add-on manager (#2457)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,7 +80,8 @@ good-names = [
 
 [tool.pylint.DESIGN]
 max-args = 10
-max-attributes = 12
+max-attributes = 25
+max-branches = 25
 
 [tool.pylint."MESSAGES CONTROL"]
 disable = [
